--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,6 @@
     <link rel="shortcut icon" href="https://tse4.mm.bing.net/th/id/OIP.NSGzYiwbrgByfHn9HWVilwAAAA?pid=Api">
   </head>
   <body>
-    <p>Ce service est actuellement en développement... Ouverture prévue le 16 août 2025</p>
+    <p>Ce service est actuellement en développement... Ouverture prévue le <strong>16 août 2025</strong></p>
   </body>
 </html>
