--- a/public/index.html
+++ b/public/index.html
@@ -6,5 +6,6 @@
   </head>
   <body>
     <p>Ce service est actuellement en développement... Ouverture prévue le <strong>16 août 2025</strong></p>
+  <i> Baptiste M. pour Euréa Coop</i>
   </body>
 </html>
