--- a/public/index.html
+++ b/public/index.html
@@ -7,5 +7,8 @@
   <body>
     <p>Ce service est actuellement en développement... Ouverture prévue le <strong>16 août 2025</strong></p>
   <i> Baptiste M. pour Euréa Coop</i>
+    <ol>
+      <li>02/08 * Mise en place</li>
+    </ol>
   </body>
 </html>
