--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,6 @@
   <body>
     <p>Ce service est actuellement en développement... Ouverture prévue le <strong>16 août 2025</strong></p>
   <i> Baptiste M. pour Euréa Coop</i>
-    <ol>
-      <li>02/08 * Mise en place</li>
-    </ol>
+    <img src='https://tse4.mm.bing.net/th/id/OIP.NSGzYiwbrgByfHn9HWVilwAAAA?pid=Api'>
   </body>
 </html>
