--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,7 @@
     <link rel="shortcut icon" href="https://tse4.mm.bing.net/th/id/OIP.NSGzYiwbrgByfHn9HWVilwAAAA?pid=Api">
   </head>
   <body>
-    <p>Ce service est actuellement en développement... Ouverture prévue le <strong>16 août 2025</strong></p>
-  <i> Baptiste M. pour Euréa Coop</i>
-    <img src='https://tse4.mm.bing.net/th/id/OIP.NSGzYiwbrgByfHn9HWVilwAAAA?pid=Api'>
+    <div id="unconnected"></div>
+    <div id="connected"></div>
   </body>
 </html>
