--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,20 @@
     <link rel="shortcut icon" href="https://tse4.mm.bing.net/th/id/OIP.NSGzYiwbrgByfHn9HWVilwAAAA?pid=Api">
   </head>
   <body>
-    <div id="unconnected"></div>
-    <div id="connected"></div>
+    <div style="display:none" id="unconnected"></div>
+    <div style="display:none" id="connected"></div>
+    <script>
+      async function start() {
+      const sessionId = await sessionStorage.getItem('session_id');
+      if (sessionId) {
+        console.log("Not connected");
+        formulaire();
+      } else {
+        console.log("Connected");
+        aiguiller();
+      }
+      }
+      start();
+    </script>
   </body>
 </html>
