--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,12 @@
     <link rel="shortcut icon" href="https://tse4.mm.bing.net/th/id/OIP.NSGzYiwbrgByfHn9HWVilwAAAA?pid=Api">
   </head>
   <body>
-    <div style="display:none" id="unconnected"></div>
+    <div style="display:none" id="unconnected">
+      <form id="login">
+        <input name="password" type="password" placeholder="Entrez votre mot de passe" required>
+        <button type="submit()">
+      </form>
+    </div>
     <div style="display:none" id="connected"></div>
     <script>
       let url;
