--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <div style="display:none" id="unconnected">
       <form id="login">
         <input name="password" type="password" placeholder="Entrez votre mot de passe" required>
-        <button type="submit()">
+        <button type="submit()">Se connecter</button>
       </form>
     </div>
     <div style="display:none" id="connected"></div>
