--- a/public/index.html
+++ b/public/index.html
@@ -75,6 +75,7 @@
       body {
           margin: 0;
           height: 100vh;
+          weight: 100vw;
           display:flex;
           justify-content:center; /* aligné à l'horizontal */
           align-items:center; /* aligné en vertical */
@@ -86,6 +87,7 @@
           padding: 2rem;
           border-radius: 1rem;
           width:100%;
+          height:100%;
           max-width:400px;
           box-shadow: 0 8px 20px rgba(0,0,0,0.1);
       }
@@ -110,7 +112,7 @@
         transition:background 0.3s ease;
       }
       button:hover {
-        background-color:dark-blue;
+        background-color:green;
       }
     </style>
   </body>
