--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Fleuréa Dispatcher</title>
     <link rel="shortcut icon" href="https://tse4.mm.bing.net/th/id/OIP.NSGzYiwbrgByfHn9HWVilwAAAA?pid=Api">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   </head>
   <body>
     <div style="display:none" id="unconnected">
