--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,12 @@
   </head>
   <body>
     <div style="display:none" id="unconnected">
-      <form class="form-container" id="login">
+      <div class="form-container">
+      <form id="login">
         <input name="password" type="password" placeholder="Entrez votre mot de passe" required>
         <button type="submit()">Se connecter</button>
       </form>
+      </div> 
     </div>
     <div style="display:none" id="connected"></div>
     <script>
