--- a/public/index.html
+++ b/public/index.html
@@ -89,9 +89,9 @@
           background: white;
           padding: 2rem;
           border-radius: 1rem;
-          width:100%;
-          height:100%;
-          max-width:400px;
+          width:80%;
+          height:80%;
+         /* max-width:400px; */
           box-shadow: 0 8px 20px rgba(0,0,0,0.1);
       }
       input {
