--- a/public/index.html
+++ b/public/index.html
@@ -115,7 +115,7 @@
         transition:background 0.3s ease;
       }
       button:hover {
-        background-color:green;
+        background-color:red;
       }
     </style>
   </body>
