--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,9 @@
   <body>
     <div style="display:none" id="unconnected">
       <div class="form-container">
+      <h1>Bienvenue</h1>
+      <p>Fleuréa Dispatcher</p>
+      <img style="width:25vh;" src="https://tse4.mm.bing.net/th/id/OIP.NSGzYiwbrgByfHn9HWVilwAAAA?pid=Api" alt="Logo Euréa">
       <form id="login">
         <input name="password" type="password" placeholder="Entrez votre mot de passe" required>
         <button type="submit()">Se connecter</button>
