--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,11 @@
     <title>Fleuréa Dispatcher</title>
     <link rel="shortcut icon" href="https://tse4.mm.bing.net/th/id/OIP.NSGzYiwbrgByfHn9HWVilwAAAA?pid=Api">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   </head>
   <body>
     <div style="display:none" id="unconnected">
-      <div class="form-container">
+      <div class="form-container w3-center">
       <h1>Bienvenue</h1>
       <p>Fleuréa Dispatcher</p>
       <img style="width:25vh;" src="https://tse4.mm.bing.net/th/id/OIP.NSGzYiwbrgByfHn9HWVilwAAAA?pid=Api" alt="Logo Euréa">
