--- a/public/index.html
+++ b/public/index.html
@@ -91,7 +91,7 @@
           padding: 2rem;
           border-radius: 1rem;
           width:80%;
-          height:80%;
+          height:auto;
          /* max-width:400px; */
           box-shadow: 0 8px 20px rgba(0,0,0,0.1);
       }
