--- a/public/index.html
+++ b/public/index.html
@@ -78,13 +78,15 @@
     <style>
       body {
           margin: 0;
+          padding:1rem;
           height: 100vh;
-          weight: 100vw;
+          width: 100vw;
           display:flex;
           justify-content:center; /* aligné à l'horizontal */
           align-items:center; /* aligné en vertical */
           background: linear-gradient(120deg, blue, red);
           font-family: Arial, sans-serif;
+          box-sizing:border-box;
       }
       .form-container {
           background: white;
@@ -92,8 +94,9 @@
           border-radius: 1rem;
           width:80%;
           height:auto;
-         /* max-width:400px; */
-          box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+          max-width:400px;
+          box-shadow: 0 8px 20px rgba(0,0,0,0.7);
+          box-sizing:border-box;
       }
       input {
         width: 100%;
