--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
       <div class="form-container w3-center">
       <h1>Bienvenue</h1>
       <p>Fleuréa Dispatcher</p>
-      <img style="width:25vh;" src="https://tse4.mm.bing.net/th/id/OIP.NSGzYiwbrgByfHn9HWVilwAAAA?pid=Api" alt="Logo Euréa">
+      <img src="https://tse4.mm.bing.net/th/id/OIP.NSGzYiwbrgByfHn9HWVilwAAAA?pid=Api" alt="Logo Euréa">
       <form id="login">
         <input name="password" type="password" placeholder="Entrez votre mot de passe" required>
         <button type="submit()">Se connecter</button>
@@ -120,6 +120,11 @@
       }
       button:hover {
         background-color:red;
+      }
+      img {
+        max-width:80%;
+        height:auto;
+        display:block;
       }
     </style>
   </body>
