--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Fleuréa Dispatcher</title>
     <link rel="shortcut icon" href="https://tse4.mm.bing.net/th/id/OIP.NSGzYiwbrgByfHn9HWVilwAAAA?pid=Api">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   </head>
   <body>
