--- a/public/index.html
+++ b/public/index.html
@@ -105,6 +105,7 @@
         border: 1px solid #ccc;
         border-radius: 0.5rem;
         font-size: 1rem;
+        box-sizing:border-box;
       }
       button {
         width: 100%;
@@ -117,6 +118,7 @@
         font-size: 1rem;
         cursor:pointer;
         transition:background 0.3s ease;
+        box-sizing:border-box;
       }
       button:hover {
         background-color:red;
@@ -125,6 +127,8 @@
         max-width:80%;
         height:auto;
         display:block;
+        box-sizing:border-box;
+        padding:1rem;
       }
     </style>
   </body>
