--- a/public/index.html
+++ b/public/index.html
@@ -127,9 +127,8 @@
       img {
         max-width:80%;
         height:auto;
-        display:block;
        /* box-sizing:border-box; */
-        margin-bottom:1rem;
+        margin:0.5rem;
       }
     </style>
   </body>
