--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Fleuréa Dispatcher</title>
-    <link rel="shortcut icon" href="https://tse4.mm.bing.net/th/id/OIP.NSGzYiwbrgByfHn9HWVilwAAAA?pid=Api">
+    <link rel="shortcut icon" href="https://res.cloudinary.com/devee5rfe/image/upload/v1754320567/OIP_lz4npc.jpg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   </head>
@@ -11,7 +11,7 @@
       <div class="form-container w3-center">
       <h1>Bienvenue</h1>
       <p>Fleuréa Dispatcher</p>
-      <img src="https://tse4.mm.bing.net/th/id/OIP.NSGzYiwbrgByfHn9HWVilwAAAA?pid=Api" alt="Logo Euréa">
+      <img src="https://res.cloudinary.com/devee5rfe/image/upload/v1754320567/OIP_lz4npc.jpg" alt="Logo Euréa">
       <form id="login">
         <input name="password" type="password" placeholder="Entrez votre mot de passe" required>
         <button type="submit()">Se connecter</button>
