--- a/public/index.html
+++ b/public/index.html
@@ -87,7 +87,7 @@
           background: linear-gradient(135deg, blue, red);
           font-family: Arial, sans-serif;
           /* box-sizing:border-box; */
-        overflow:hidden;
+        /* overflow:hidden; */
       }
       .form-container {
           background: white;
