--- a/public/index.html
+++ b/public/index.html
@@ -86,8 +86,7 @@
           align-items:center; /* aligné en vertical */
           background: linear-gradient(135deg, blue, red);
           font-family: Arial, sans-serif;
-          /* box-sizing:border-box; */
-        /* overflow:hidden; */
+           box-sizing:border-box; 
       }
       .form-container {
           background: white;
@@ -97,7 +96,7 @@
           height:auto;
           max-width:400px;
           box-shadow: 0 8px 20px rgba(0,0,0,0.7);
-        /*  box-sizing:border-box; */
+         box-sizing:border-box;
       }
       input {
         width: 100%;
@@ -106,7 +105,7 @@
         border: 1px solid #ccc;
         border-radius: 0.5rem;
         font-size: 1rem;
-       /* box-sizing:border-box; */
+        box-sizing:border-box; 
       }
       button {
         width: 100%;
@@ -119,7 +118,7 @@
         font-size: 1rem;
         cursor:pointer;
         transition:background 0.3s ease;
-       /* box-sizing:border-box; */
+       box-sizing:border-box;
       }
       button:hover {
         background-color:red;
@@ -127,7 +126,7 @@
       img {
         max-width:80%;
         height:auto;
-       /* box-sizing:border-box; */
+       box-sizing:border-box;
         margin:0.5rem;
       }
     </style>
