--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,12 @@
   <body>
     <div id="unconnected" hidden>
       <div class="form-container w3-center">
-      <h1>Bienvenue</h1>
-      <p>Fleuréa Dispatcher</p>
-      <img src="https://res.cloudinary.com/devee5rfe/image/upload/v1754320567/OIP_lz4npc.jpg" alt="Logo Euréa">
-      <form id="login">
-        <input name="password" type="password" placeholder="Entrez votre mot de passe" required>
-        <button type="submit()">Se connecter</button>
+      <h1 class="w3-center">Bienvenue</h1>
+      <p class="w3-center">Fleuréa Dispatcher</p>
+      <img class="w3-center" src="https://res.cloudinary.com/devee5rfe/image/upload/v1754320567/OIP_lz4npc.jpg" alt="Logo Euréa">
+      <form class="w3-center" id="login">
+        <input class="w3-center" name="password" type="password" placeholder="Entrez votre mot de passe" required>
+        <button class="w3-center" type="submit()">Se connecter</button>
       </form>
       </div> 
     </div>
