--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Fleuréa Dispatcher</title>
     <link rel="shortcut icon" href="https://res.cloudinary.com/devee5rfe/image/upload/v1754320567/OIP_lz4npc.jpg">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   </head>
   <body>
