--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,7 @@
       async function formulaire () {
         document.getElementById('connected').hidden = true;
         document.getElementById('unconnected').hidden = false;
+        autoConnect();
       }
       
       async function check(id) {
@@ -66,6 +67,7 @@
         const response = await fetch(`https://${url.host}/${endpoint}`,{
           'method':method,
           'headers' : {
+            'Content-Type':'application/json',
             'auth': auth
           }, 
           'body' : JSON.stringify(body)
@@ -73,6 +75,24 @@
         const data = await response.json();
           return data;
         } catch (err) {return err;}
+      }
+
+      document.getElementById('login').addEventListener('submit', async (e) => {
+        e.preventDefault();
+        const formData = new formData(this);
+        const data = Object.fromEntries(formData.entries());
+        const content = {
+          password:data.password
+        };
+        const fromServer = await fetcher('login', content, 'POST', 'noauth');
+        localStorage.setItem('offtoken', fromServer.off);
+      });
+
+      async function autoConnect () {
+        if (localStorage.getItem('offtoken')) {
+         const fromServer = await fetcher('getsessionid', content, 'POST', 'noauth');
+          sessionStorage.setItem('session_id', fromServer.id);
+        }
       }
     </script>
     <style>
