--- a/public/index.html
+++ b/public/index.html
@@ -85,6 +85,9 @@
           password:data.password
         };
         const fromServer = await fetcher('login', content, 'POST', 'noauth');
+        if (fromServer.status == "no") {
+          alert("Le mot de passe est incorrect !");
+        }
         localStorage.setItem('offtoken', fromServer.off);
       });
 
