--- a/public/index.html
+++ b/public/index.html
@@ -79,8 +79,8 @@
 
       document.getElementById('login').addEventListener('submit', async (e) => {
         e.preventDefault();
-        const formData = new formData(this);
-        const data = Object.fromEntries(formData.entries());
+        const formData = await new formData(this);
+        const data = await Object.fromEntries(formData.entries());
         const content = {
           password:data.password
         };
