--- a/public/index.html
+++ b/public/index.html
@@ -49,6 +49,21 @@
           'id':localStorage.getItem('session_id')
         };
         const data = fetcher('getrole', content, 'POST', localStorage.getItem('session_id'));
+        if (data.role == 'driver') {
+          if (document.referrer) {
+            const last_url = new URL (document.referrer);
+            if (last_url.hostname == "fleurea.onrender.com" && last_url.pathname == "/driver") {
+              window.location.href = document.referrer;
+            } else {
+             window.location.href = `https://${url.hostname}/driver`; 
+            }
+          } else {
+            window.location.href = `https://${url.hostname}/driver`; 
+          }
+        }
+        if (data.role == 'admin') {
+          window.location.href = `https://${url.hostname}/admin`;
+        }
       }
       
       async function formulaire () {
