--- a/public/index.html
+++ b/public/index.html
@@ -45,10 +45,12 @@
       async function aiguiller () {
         document.getElementById('unconnected').hidden = true;
         document.getElementById('connected').hidden = false;
+        const sessionId = await localStorage.getItem('session_id');
+        console.warn(sessionId);
         const content = {
-          'id':await localStorage.getItem('session_id')
+          'id':sessionId
         };
-        const data = fetcher('getrole', content, 'POST', await localStorage.getItem('session_id'));
+        const data = fetcher('getrole', content, 'POST', sessionId);
         if (data.role == 'driver') {
           if (document.referrer) {
             const last_url = new URL (document.referrer);
