--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,13 @@
       </form>
       </div> 
     </div>
-    <div id="connected" hidden></div>
+    <div id="connected" hidden>
+      <div class="form-container w3-center">
+        <p class="w3-center">Fleuréa Dispatcher</p>
+      <img class="w3-center" src="https://res.cloudinary.com/devee5rfe/image/upload/v1754320567/OIP_lz4npc.jpg" alt="Logo Euréa">
+        <p class="w3-center">Redirection vers le bon service en cours...</p>
+      </div>
+    </div>
     <script>
       let url;
       let sessionId;
