--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
         const content = {
           'id':sessionId
         };
-        const data = fetcher('getrole', content, 'POST', sessionId);
+        const data = await fetcher('getrole', content, 'POST', sessionId);
         console.log(data.role);
         if (data.role == 'driver') {
           if (document.referrer) {
