--- a/public/driver.html
+++ b/public/driver.html
@@ -1,1 +1,71 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Fleuréa Dispatcher | Portail conducteur</title>
+    <link rel="shortcut icon" href="https://res.cloudinary.com/devee5rfe/image/upload/v1754320567/OIP_lz4npc.jpg">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  </head>
+  <body>
+    <div class="w3-center form-container">
+      <h1 class="w3-center">Bienvenue</h1>
+      <p class="w3-center">Fleuréa Dispatcher | Portail conducteur</p>
+      <img class="w3-center" src="https://res.cloudinary.com/devee5rfe/image/upload/v1754320567/OIP_lz4npc.jpg" alt="Logo Euréa">
+    </div>
+    <style>
+      body {
+          margin: 0;
+          padding:1rem;
+          height: 100vh;
+          width: 100vw;
+          display:flex;
+          justify-content:center; /* aligné à l'horizontal */
+          align-items:center; /* aligné en vertical */
+          background: linear-gradient(135deg, green, blue);
+          font-family: Arial, sans-serif;
+           box-sizing:border-box; 
+      }
+      .form-container {
+          background: white;
+          padding: 2rem;
+          border-radius: 1rem;
+          width:100%;
+          height:auto;
+          max-width:400px;
+          box-shadow: 0 8px 20px rgba(0,0,0,0.7);
+         box-sizing:border-box;
+      }
+      input {
+        width: 100%;
+        padding: 0.75rem;
+        margin-bottom: 1rem;
+        border: 1px solid #ccc;
+        border-radius: 0.5rem;
+        font-size: 1rem;
+        box-sizing:border-box; 
+      }
+      button {
+        width: 100%;
+        padding: 0.75rem;
+        background-color:blue;
+        color:white;
+        margin-bottom: 1rem;
+        border: none;
+        border-radius: 0.5rem;
+        font-size: 1rem;
+        cursor:pointer;
+        transition:background 0.3s ease;
+       box-sizing:border-box;
+      }
+      button:hover {
+        background-color:red;
+      }
+      img {
+        max-width:80%;
+        height:auto;
+       box-sizing:border-box;
+        margin:0.5rem;
+      }
+    </style>
+  </body>
+</html>
