--- a/public/driver.html
+++ b/public/driver.html
@@ -86,6 +86,31 @@
       }
       
       start();
+        
+      async function check(id) {
+        const answer = await fetcher('checksession',{'id':id},'POST','noauth');
+        const bool = answer.value;
+        if (bool) {
+          return true;
+        } else {
+          return false;
+        }
+      }
+
+      async function fetcher (endpoint, body, method, auth) {
+        try {
+        const response = await fetch(`https://${url.host}/${endpoint}`,{
+          'method':method,
+          'headers' : {
+            'Content-Type':'application/json',
+            'auth': auth
+          }, 
+          'body' : JSON.stringify(body)
+        });
+        const data = await response.json();
+          return data;
+        } catch (err) {return err;}
+      }
     </script>
   </body>
 </html>
