--- a/public/admin.html
+++ b/public/admin.html
@@ -21,7 +21,7 @@
           display:flex;
           justify-content:center; /* aligné à l'horizontal */
           align-items:center; /* aligné en vertical */
-          background: linear-gradient(135deg, green, blue);
+          background: linear-gradient(135deg, blue, yellow);
           font-family: Arial, sans-serif;
            box-sizing:border-box; 
       }
