--- a/public/admin.html
+++ b/public/admin.html
@@ -7,11 +7,9 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   </head>
   <body>
-    <div class="w3-center form-container">
-      <h1 class="w3-center">Bienvenue</h1>
-      <p class="w3-center">Fleuréa Dispatcher | Portail administration</p>
-      <img class="w3-center" src="https://res.cloudinary.com/devee5rfe/image/upload/v1754320567/OIP_lz4npc.jpg" alt="Logo Euréa">
-    </div>
+   <div class="head" id="head">
+     
+   </div>
     <style>
       body {
           margin: 0;
@@ -65,6 +63,15 @@
         height:auto;
        box-sizing:border-box;
         margin:0.5rem;
+      }
+      .head {
+        background-color:linear-gradient(90, black, grey);
+        display:flex;
+        position:absolute;
+        top:0;
+        right:0;
+        width:100%;
+        height:2vh;
       }
     </style>
     <script>
