--- a/public/admin.html
+++ b/public/admin.html
@@ -65,7 +65,7 @@
         margin:0.5rem;
       }
       .head {
-        background-color:linear-gradient(90, black, grey);
+        background:linear-gradient(90, black, grey);
         display:flex;
         position:absolute;
         top:0;
