--- a/public/admin.html
+++ b/public/admin.html
@@ -65,13 +65,13 @@
         margin:0.5rem;
       }
       .head {
-        background:linear-gradient(90, black, grey);
+        background:linear-gradient(90deg, black, grey);
         display:flex;
         position:absolute;
         top:0;
         right:0;
         width:100%;
-        height:2vh;
+        height:10vh;
       }
     </style>
     <script>
