--- a/public/admin.html
+++ b/public/admin.html
@@ -14,7 +14,9 @@
        <img src="https://res.cloudinary.com/devee5rfe/image/upload/v1754320567/OIP_lz4npc.jpg" alt="Logo Euréa">
        </div>
    <div id="compte">
-     <img src="https://tse3.mm.bing.net/th/id/OIP.HNR4vi8VT2lIWrRTQzFYyQHaE7?r=0&pid=Api" alt="people">
+      <div class="circle"> 
+      <img src="https://tse3.mm.bing.net/th/id/OIP.HNR4vi8VT2lIWrRTQzFYyQHaE7?r=0&pid=Api" alt="Icône du propriétaire du compte">
+      </div>
      <p>Jean-Michel LETITBE</p>
    </div>
    </div>
@@ -80,6 +82,12 @@
         right:0;
         width:100%;
         height:10vh;
+      }
+      .circle {
+        width:5vh;
+        height:5vh;
+        border-radius:50%;
+        overflow:hidden;
       }
     </style>
     <script>
