--- a/public/admin.html
+++ b/public/admin.html
@@ -13,6 +13,10 @@
      <div id="logo_eurea">
        <img src="https://res.cloudinary.com/devee5rfe/image/upload/v1754320567/OIP_lz4npc.jpg" alt="Logo Euréa">
        </div>
+     <div id="actionButtons">
+       <button id="visuBtn">Voir la carte</button>
+       <button id="adminBtn">Administration</button>
+       <div>
    <div id="compte">
       <div class="circle"> 
       <img src="https://tse3.mm.bing.net/th/id/OIP.HNR4vi8VT2lIWrRTQzFYyQHaE7?r=0&pid=Api" alt="Icône du propriétaire du compte">
