--- a/public/admin.html
+++ b/public/admin.html
@@ -8,15 +8,15 @@
   </head>
   <body>
    <div class="head" id="head">
-     <div id="heure">18:59</div>
-     <div id="portal"> | Portail Administration | </div>
-     <div id="logo_eurea">
-       <img src="https://res.cloudinary.com/devee5rfe/image/upload/v1754320567/OIP_lz4npc.jpg" alt="Logo Euréa">
-       </div>
-     <div id="actionButtons">
+     <div id="heure"><p>18:59</p></div>
+     <div id="portal"><p>Portail Administration</p></div>
+      <div id="actionButtons">
        <button id="visuBtn">Voir la carte</button>
        <button id="adminBtn">Administration</button>
        <div>
+     <div id="logo_eurea">
+       <img src="https://res.cloudinary.com/devee5rfe/image/upload/v1754320567/OIP_lz4npc.jpg" alt="Logo Euréa">
+       </div>
    <div id="compte">
       <div class="circle"> 
       <img src="https://tse3.mm.bing.net/th/id/OIP.HNR4vi8VT2lIWrRTQzFYyQHaE7?r=0&pid=Api" alt="Icône du propriétaire du compte">
