--- a/public/admin.html
+++ b/public/admin.html
@@ -10,7 +10,7 @@
    <div class="head" id="head">
      <div id="heure"><p>18:59</p></div>
      <div id="portal"><p>Portail Administration</p></div>
-      <div id="actionButtons">
+      <div id="actions">
        <button id="visuBtn">Voir la carte</button>
        <button id="adminBtn">Administration</button>
        <div>
@@ -81,17 +81,51 @@
       .head {
         background:linear-gradient(90deg, black, grey);
         display:flex;
-        position:absolute;
+        position:fixed; /* Fixed is better than absolute as it fix the position even when scolling */
         top:0;
-        right:0;
+        left:0; /* We'll take the left side as a spot better than the right one */
         width:100%;
         height:10vh;
+        align-items:center; /* We center everything in height */
+        justify-content:space-between; /* Distribue l'espace horizontalement */
+        padding:0 1rem; /* Espace entre bordure et contenu */
+        box-sizing:border-box;
+        color:white;
+        font-weight:bold; /* Police d'écriture en gras */
+        z-index:1000;
       }
       .circle {
         width:5vh;
         height:5vh;
         border-radius:50%;
         overflow:hidden;
+      }
+       .circle img {
+        width:100%;
+        height:100%;
+        object-fit:cover;
+      }
+      #heure, #portal, #logo_eurea, #compte {
+        display:flex;
+        align-items:center;
+        white-space:nowrap; /* Forcer le texte à rester sur une seule ligne */
+      }
+      #actions {
+        display:flex;
+        gap: 0.5rem;
+      }
+      #actions button {
+      padding: 0.5rem 1rem;
+      }
+
+      #logo_eurea img {
+        height:6vh;
+        margin-left:0.5rem;
+      }
+
+      #compte p {
+        margin:0;
+        font-size:1rem;
       }
     </style>
     <script>
