--- a/public/admin.html
+++ b/public/admin.html
@@ -72,7 +72,7 @@
       button:hover {
         background-color:red;
       }
-      img {
+      .img {
         max-width:80%;
         height:auto;
        box-sizing:border-box;
