--- a/public/admin.html
+++ b/public/admin.html
@@ -116,7 +116,7 @@
       #compte p {
         margin:0;
         font-size:1rem;
-        margin-left:10px;
+        margin-left:2vh;
       }
     </style>
     <script>
