--- a/public/admin.html
+++ b/public/admin.html
@@ -120,9 +120,12 @@
       }
 
       @media (max-width: 1024px) { /* Ce qui se cache sur la version mobile */
-         #heure, #portal {
+         #heure, #portal, #logo_eurea {
            display:none;
          }
+        button {
+          font-size:0.5rem;
+        }
       }
     </style>
     <script>
