--- a/public/admin.html
+++ b/public/admin.html
@@ -123,9 +123,9 @@
          #heure, #portal, #logo_eurea {
            display:none;
          }
-      /*  button {
-          font-size:0.5rem;
-        } */
+        button {
+          font-size:0.75rem;
+        } 
       }
     </style>
     <script>
