--- a/public/admin.html
+++ b/public/admin.html
@@ -153,7 +153,7 @@
         const answer = await fetcher('checksession',{'id':id},'POST','noauth');
         const bool = answer.value;
         console.warn(bool);
-        if (bool == 'true') {
+        if (bool) {
           console.warn("true");
           return true;
         } else {
