--- a/public/admin.html
+++ b/public/admin.html
@@ -187,7 +187,7 @@
         socket = new WebSocket (`wss://${url.host}?key=${sessionStorage.getItem('session_id')}`);
         socket.addEventListener('open', () => {
                // console.log("Connecté au serveur websocket !");
-          socket.send({content:"Connection from client..."});
+          socket.send(JSON.stringify({content:"Connection from client..."}));
         });
         socket.addEventListener("message", (event) => {
         mes = JSON.parse(event.data);
