--- a/public/admin.html
+++ b/public/admin.html
@@ -17,9 +17,9 @@
        </div>
    <div id="compte">
       <div class="circle"> 
-      <img src="https://tse3.mm.bing.net/th/id/OIP.HNR4vi8VT2lIWrRTQzFYyQHaE7?r=0&pid=Api" alt="Icône du propriétaire du compte">
+      <img id="myPict" src="https://tse3.mm.bing.net/th/id/OIP.HNR4vi8VT2lIWrRTQzFYyQHaE7?r=0&pid=Api" alt="Icône du propriétaire du compte">
       </div>
-     <p>Jean-Michel LETITBE</p>
+     <p id="myName">Jean-Michel LETITBE</p>
    </div>
    </div>
     <style>
