--- a/public/admin.html
+++ b/public/admin.html
@@ -203,6 +203,8 @@
         const icon = answer.link;
         const first_name = answer.first_name;
         const name = answer.name;
+        document.getElementById('myPict').src = icon;
+        document.getElementById('myName').src = `${first_name} ${name}`;
       }
     </script>
   </body>
