--- a/public/admin.html
+++ b/public/admin.html
@@ -188,7 +188,7 @@ const offset = -((new Date().getTimezoneOffset()) / 60);
         if (socket && socket.readyState === WebSocket.OPEN) {
           return;
         }
-        socket = new WebSocket (`wss://${url.host}?key=${sessionStorage.getItem('session_id')}`);
+        socket = new WebSocket (`wss://${url.host}?key=${sessionStorage.getItem('session_id')}&offset=${offset}`);
         socket.addEventListener('open', () => {
                // console.log("Connecté au serveur websocket !");
           socket.send(JSON.stringify({action:"SET", offset:offset}));
