--- a/public/admin.html
+++ b/public/admin.html
@@ -13,7 +13,7 @@
        <button id="visuBtn">Voir la carte</button>
        <button id="adminBtn">Administration</button>
      <div id="logo_eurea">
-       <img src="https://res.cloudinary.com/devee5rfe/image/upload/v1754320567/OIP_lz4npc.jpg" alt="Logo Euréa">
+       <img src="https://res.cloudinary.com/devee5rfe/image/upload/v1754320567/OIP_lz4npc.jpg" onclick="window.location.href = 'https://www.groupe-eurea.com/';" alt="Logo Euréa">
        </div>
    <div id="compte">
       <div class="circle"> 
