--- a/public/admin.html
+++ b/public/admin.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   </head>
   <body>
+    <div id="lightbox">
+      <div class="lightbox-content">
+        <span id=close-btn">&times;</span>
+        <div class="circle">
+          <img src="" alt="Profil">
+        </div>
+        <h2></h2>
+        <p></p>
+      </div>
+    </div>
    <div class="head" id="head">
      <div id="heure"><p id="time">N/A</p></div>
      <div id="portal"><p>Portail Administration</p></div>
@@ -211,5 +221,54 @@ const offset = -((new Date().getTimezoneOffset()) / 60);
         document.getElementById('myName').textContent = `${first_name} ${name}`;
       }
     </script>
+    <style>
+      #lightbox {
+        position:fixed;
+        top:0;
+        left:0;
+        height:100vh;
+        width:100vh;
+        background:rgba(100,100,100,0.7);
+        display:none;
+        justofy-content:center;
+        align-items:center;
+        z-index:1000;
+      }
+       #lightbox-content {
+       background:white;
+        padding:2em;
+         border-radius:12px;
+         text-align:center;
+         max-width:400px;
+         width:80%;
+         position:relative;
+         box-shadow: 0 0 15px rgba(0,0,0,0.3);
+      }
+      #close-btn {
+        position:absolute;
+        top:10px;
+        right:15px;
+        font-size:1.8em;
+        cursor:pointer;
+        color:red;
+      }
+    </style>
+     <script>
+       const profilePic = document.getElementById('myPict');
+       const lightbox = document.getElementById('lightbox');
+       const closeBtn = document.getElementById('close-btn');
+       
+       profilePic.addEventListener('click', () => {
+         lightbox.style.display = 'flex';
+       });
+        closeBtn.addEventListener('click', () => {
+         lightbox.style.display = 'none';
+       });
+       lightbox.addEventListener('click', (e) => {
+         if (e.target === lightbox) {
+           lightbox.style.display = 'none';
+         }
+       });
+     </script>
   </body>
 </html>
