--- a/public/admin.html
+++ b/public/admin.html
@@ -254,7 +254,7 @@ const offset = -((new Date().getTimezoneOffset()) / 60);
       }
     </style>
      <script>
-       const profilePic = document.getElementById('myPict');
+       const profilePic = document.getElementById('compte');
        const lightbox = document.getElementById('lightbox');
        const closeBtn = document.getElementById('close-btn');
        document.addEventListener('DOMContentLoaded', () => {
