--- a/public/admin.html
+++ b/public/admin.html
@@ -15,7 +15,7 @@
         </div>
         <h2 id="lightH2"></h2>
         <p id="lightP"></p>
-        <button onclick="localStorage.removeItem('offtoken'); start();">Se déconnecter</button>
+        <button onclick="localStorage.removeItem('offtoken'); sessionStorage.removeItem('session_id'); start();">Se déconnecter</button>
       </div>
     </div>
    <div class="head" id="head">
