--- a/public/admin.html
+++ b/public/admin.html
@@ -10,7 +10,7 @@
     <div id="lightbox">
       <div class="lightbox-content">
         <span id="close-btn">&times;</span>
-        <div class="circle">
+        <div class="circleB">
           <img id="lightImg" src="" alt="Profil">
         </div>
         <h2 id="lightH2"></h2>
@@ -109,7 +109,14 @@
         border-radius:50%;
         overflow:hidden;
       }
-       .circle img {
+
+      .circleB {
+        width:25vh;
+        height:25vh;
+        border-radius:50%;
+        overflow:hidden;
+      }
+       .circle img, circleB img {
         width:100%;
         height:100%;
         object-fit:cover;
