--- a/public/admin.html
+++ b/public/admin.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="lightbox">
-      <div class="lightbox-content">
+      <div class="lightbox-content w3-center">
         <span id="close-btn">&times;</span>
         <div class="circleB">
           <img id="lightImg" src="" alt="Profil">
