--- a/public/admin.html
+++ b/public/admin.html
@@ -116,10 +116,14 @@
         border-radius:50%;
         overflow:hidden;
       }
-       .circle img, circleB img {
+       .circle img, .circleB img {
         width:100%;
         height:100%;
         object-fit:cover;
+        position:absolute;
+        top:50%;
+        right:50%;
+        transform: translate(-50%,-50%);
       }
       #heure, #portal, #logo_eurea, #compte, #visuBtn, #adminBtn {
         display:flex;
