--- a/public/admin.html
+++ b/public/admin.html
@@ -111,8 +111,8 @@
       }
 
       .circleB {
-        width:25vh;
-        height:25vh;
+        width:10vh;
+        height:10vh;
         border-radius:50%;
         overflow:hidden;
       }
@@ -122,7 +122,7 @@
         object-fit:cover;
         position:absolute;
         top:50%;
-        right:50%;
+        left:50%;
         transform: translate(-50%,-50%);
       }
       #heure, #portal, #logo_eurea, #compte, #visuBtn, #adminBtn {
