--- a/public/admin.html
+++ b/public/admin.html
@@ -108,6 +108,7 @@
         height:5vh;
         border-radius:50%;
         overflow:hidden;
+        position:relative;
       }
 
       .circleB {
@@ -115,11 +116,13 @@
         height:10vh;
         border-radius:50%;
         overflow:hidden;
+        position:relative;
       }
        .circle img, .circleB img {
         width:100%;
         height:100%;
         object-fit:cover;
+        position:absolute;
         top:50%;
         left:50%;
         transform: translate(-50%,-50%);
