--- a/public/admin.html
+++ b/public/admin.html
@@ -10,7 +10,7 @@
     <div id="lightbox">
       <div class="lightbox-content w3-center">
         <span id="close-btn">&times;</span>
-        <div class="circleB">
+        <div class="circleB" style="top:50%; left:50%; transform:translate(-50%,-50%)">
           <img id="lightImg" src="" alt="Profil">
         </div>
         <h2 id="lightH2"></h2>
