--- a/public/driver.html
+++ b/public/driver.html
@@ -145,7 +145,7 @@
       }
 
       @media (max-width: 680px) { /* Ce qui se cache sur la version mobile */
-         #heure, #portal, #logo_eurea {
+        #portal, #logo_eurea {
            display:none;
          }
         button {
